fixed image overflow bug on focused projects mobile view

--- a/src/styles/components/focused-project.css
+++ b/src/styles/components/focused-project.css
@@ -15,7 +15,7 @@
 .focused-project img {
   border-radius: 10px;
   max-width: 100%;
-  max-height: 100%;
+  max-height: 600px;
 }
 
 @media screen and (max-width: 600px) {
@@ -23,11 +23,22 @@
     display: flex;
     flex-direction: column;
     gap: 2em;
-    height: 90%;
+    height: 50vh;
   }
 
   .focused-project .left-col {
     height: 50%;
     overflow: auto;
+    flex-grow: 0;
+    flex-shrink: 0;
+  }
+
+  .focused-project .image-container {
+    height: 50%;
+  }
+
+  .focused-project .image-container img {
+    max-height: 100%;
+    width: auto;
   }
 }
